{
    "name": "InputMgr",
    "maps": [
        {
            "name": "Player",
            "id": "9913cda1-df61-45fb-a02a-75bf93a85bbf",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "8390da89-0d0d-4e4d-9c32-5c1f846347cb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "03e4e593-5faf-461c-99e9-7fc2ac3a8367",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "c22f420e-1a25-491b-85da-97e4e8e09c97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "6140ce18-b5b3-4811-8c92-99892df78b87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KillDash",
                    "type": "Button",
                    "id": "5c388911-0439-4c7b-a310-44a735d76cb6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownPlatform",
                    "type": "Button",
                    "id": "f9fdf6a6-0ec5-407c-b63c-052663f1edb2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "VirtualMouse",
                    "type": "Value",
                    "id": "c0a4ca0d-8e39-4a80-8fdd-c10d52f4be99",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Jotstick",
                    "id": "cf3ccbb1-ff02-4683-a7e8-407328d50ba7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b4e66fd3-a625-40e3-bb35-52547f509fd6",
                    "path": "<XInputController>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9a4538d5-045e-4e46-9a5d-1f7383c5d683",
                    "path": "<XInputController>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "983422ae-5366-4b0b-92a8-f3f11d219aa4",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "320c4bbe-da2b-4563-9fe3-c386a5bc3f2d",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "78633b93-7ed0-4d74-b7b3-d864379b4702",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92661fcf-6468-4332-a86d-59f1790211ac",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b19441d-fd6a-4257-ba20-1dd4dc796fa0",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b05cba1d-89bd-48c9-8650-52ac0fbf8f3a",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "KillDash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a05cc67-092e-4db1-8589-2d3a6dad3fb9",
                    "path": "<XInputController>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "DownPlatform",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Joystick",
                    "id": "2356516a-96ce-49f4-bb6c-0b8a62b43a56",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VirtualMouse",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "368c71f8-c50a-4ea4-8cb8-5c7f824f1e5c",
                    "path": "<XInputController>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "VirtualMouse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0c41533c-7371-45be-a909-f52b78f626d6",
                    "path": "<XInputController>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "VirtualMouse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4e0701d0-004f-46c9-b665-d9477c069993",
                    "path": "<XInputController>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "VirtualMouse",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "810b6c64-de0b-425b-a81e-32239e9848b4",
                    "path": "<XInputController>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox",
                    "action": "VirtualMouse",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Xbox",
            "bindingGroup": "Xbox",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}